<resources>
    <string name="app_name">Basketball Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 POINTS</string>
    <string name="_2_points">+2 POINTS</string>
    <string name="free_throw">FREE THROW</string>
    <string name="reset">RESET</string>
    <string name="action_settings">Settings</string>
    <string name="teamA_wins">Team A wins</string>
    <string name="teamB_wins">Team B wins</string>
    <string name="draw">Draw</string>
    <string name="winner">winner</string>
</resources>
